# llm-testing

./: .gitignore  CMakeLists.txt  README.md
bench/: bench_framework.hpp  bench_main.cpp
examples/: generate.cpp
include/llm/: config.hpp  model.hpp  ops.hpp  tensor.hpp
src/: model.cpp  ops.cpp
tests/: test_framework.hpp  test_main.cpp  test_model.cpp  test_ops.cpp
